# EmbaralhaPalavra

./: README.md  embaralha_palavra.py  frase_motivacional.py  index.py  palavras.json  pyproject.toml  sorteia_palavra.py
